	Fixed: Ftp, Mail and SQL passwords are not decrypted during database update r53
	Fixed: Infinite loop in iMSCP_Update_Database::dropIndexByColumn()
	Fixed: Undefined key KEY_NAME in iMSCP_Update_Database::dropIndexByColumn()
	Fixed: Undefined offset in database update r169

DISTROS
	Re-added: Courier as alternative for IMAP/POP3 servers (Debian Jessie)

ENGINE
	Added: iMSCP::Net::getAddrType() method
	Changed: Backslashes are no longer allowed in SQL user names and passwords
	Changed: SASL authentication is now made against database directly (Postfix)
	Fixed: Any error occurring from the imscp_network script must go into the imscp_network.log file
	Fixed: German special characters are not displayed properly in auto-reply messages
	Fixed: In case the passphrase is missing, user must not be prompted (iMSCP::OpenSSL)
	Fixed: Missing EOL in SSL certificate containers (iMSCP::OpenSSL)
	Fixed: The backend must not try to start services which are not used (MySQL, Bind9)
	Fixed: Quota script must ignore maildir which doesn't exist
	Replaced: Dovecot SASL by Cyrus SASL (Postfix)

GUI
	Fixed: AjaXplorer (Pydio) Autologon feature is broken
	Fixed: Disk usage (percent value) is wrong (admin level / Customer statistics)
	Fixed: Feature custom_dns_record is not known by the customerHasFeature() function
	Fixed: Unable to list domain aliases by name (search feature / reseller level)

INSTALLER
	Added: Dialog box allowing to setup the public IP for servers which are inside a private LAN
	Added: Option allowing to force reinstallation/reconfiguration of distro packages
	Fixed: Bind9 cannot start if the resolvconf package is not configured yet (Debian Squeeze)
	Fixed: Installer hangs while packages installation (Debian Jessie)
	Fixed: Unable to migrate from ispCP (linked to the infinite loop in iMSCP_Update_Database::dropIndexByColumn())
	Updated: Preseed template file according new parameters

PLUGINS
	Fixed: Loading of plugins must not fail silently

VENDOR: