@@ -58,12 +58,22 @@
     </LocationMatch>
 
     # SECTION php_fpm BEGIN.
-    Alias /php5-fcgi /var/lib/apache2/fastcgi/php5-fcgi-master-ssl
-
-    FastCGIExternalServer /var/lib/apache2/fastcgi/php5-fcgi-master-ssl \
-      -socket /var/run/php5-fpm-master.socket \
-      -idle-timeout 300 \
-      -pass-header Authorization
+    <IfVersion < 2.4.9>
+        Alias /php5-fcgi /var/lib/apache2/fastcgi/php5-fcgi-master-ssl
+        FastCGIExternalServer /var/lib/apache2/fastcgi/php5-fcgi-master-ssl \
+            -socket /var/run/php5-fpm-master.socket \
+            -idle-timeout 300 \
+            -pass-header Authorization
+    </IfVersion>
+    <IfVersion >= 2.4.9>
+        SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
+        <Proxy "unix:/var/run/php5-fpm-master.socket|fcgi://php5-fpm">
+            ProxySet disablereuse=off
+        </Proxy>
+        <FilesMatch \.php$>
+            SetHandler proxy:fcgi://php5-fpm
+        </FilesMatch>
+    </IfVersion>
     # SECTION php_fpm END.
 
     SSLEngine On
