@@ -14,8 +14,8 @@
             </apache_itk>
             <apache_php_fpm>
                 <package>apache2</package>
+                <package>apache2-dev</package>
                 <package>apache2-suexec-custom</package>
-                <package>libapache2-mod-fastcgi</package>
                 <package>php5-fpm</package>
             </apache_php_fpm>
         </alternative>
